--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "normalize.css": "^8.0.1"
   }
